add product page , profile , prepare search and update profile
