# laravel/app/Models/Order.php
@@ -5,6 +5,7 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\SoftDeletes;
+
 /**
  * @OA\Schema(
  *      schema="Order",
@@ -70,11 +71,11 @@ use Illuminate\Database\Eloquent\SoftDeletes;
  */
 class Order extends Model
 {
-    use HasFactory,SoftDeletes;
+    use HasFactory, SoftDeletes;
 
     protected $fillable = ['order_date', 'order_status', 'delivery_address', 'consumer_id'];
 
-   
+
 
     public function deliveryPersonnel()
     {
@@ -88,5 +89,17 @@ class Order extends Model
     public function products()
     {
         return $this->belongsToMany(Product::class, 'order_products');
+    }
+    // Method to assign a delivery person to the order
+    public function assignDeliveryPerson(DeliveryPersonnel $deliveryPersonnel)
+    {
+        $this->deliveryPersonnel()->associate($deliveryPersonnel);
+        $this->save();
+    }
+    public function changeStatus($newStatus)
+    {
+        // You can add additional validation or logic if needed
+        $this->order_status = $newStatus;
+        $this->save();
     }
 }
